--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.71.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "prettier": "^2.8.6"
   },
   "private": true
 }
